--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="container">
         <div class="data-item" data-testid="slackUserName">
-            <label>Slack Name:</label>
+            <label>SlackUsername:</label>
             <span>Kulaba janette</span>
         </div>
 
 
         <div class="data-item" data-testid="slackDisplayImage">
             <label>Slack profile picture:</label>
-            <img src="pexels-bash-mutumba-1559086.jpg" alt="Your Slack Username">
+            <img src="https://ca.slack-edge.com/T05FFAA91JP-U05RFJUCB1Q-7d7ca4797e77-512" alt="Your Slack Username">
         </div>
 
 
